horde/themes/screen.css
/* ... */
.id {
    color: #e82;
    background: #e4e4e0;
}
.attr {
    color: #6af;
}
.value {
    color: #d46;
}
.color {
    color: #f57;
}
.eol {
    color: #26e;
}
.url {
    color: #962;
}
.file {
    color: #444;
    background: #fe4;
}
.class {
    font-style: italic;
}

/* Sound selection. */
ul.sound-list {
    list-style: none;
}
.sound-list li {
    height: 24px;
}
.sound-list embed {
    vertical-align: middle;
    height: 24px;
}

/* Calendar Popup. */
.hordeCalendarPopup {
    border: 1px solid #ccc;
    background: #fff;
    width: 12em;
}
.hordeCalendarPopup thead {
    font-weight: bold;
}
.hordeCalendarPopup th {
    border-bottom: 1px solid #ccc;
}
.hordeCalendarPopup tbody {
    text-align: right;
}
.hordeCalendarPopup a {
    color: #000;
    display: block;
    padding: 2px;
}
.hordeCalendarPopup tbody a:hover {
    background: #ffc;
}
.hordeCalendarPopup .hordeCalendarCurrent {
    font-weight: bold;
    background: #eef;
}
.hordeCalendarPopup .hordeCalendarToday {
    font-weight: bold;
}

.hidden {
    display: none;
}

/* Redbox styles. */
#RB_overlay {
    position: absolute;
    z-index: 100;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    min-height: 100%;
    background-color: #000;
    filter: alpha(opacity=60);
    -moz-opacity: .6;
    opacity: .6;
}
#RB_loading {
    z-index: 101;
    width: 66px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 200px;
    padding-bottom: 66px;
    text-align: center;
    background: url("graphics/redbox_spinner.gif") no-repeat bottom center;
}
#RB_window {
    z-index: 102;
    background-color: #fff;
    display: block;
    text-align: left;
    margin: 20px auto 0 auto;
    position: absolute;
}
#RB_window p, #RB_window ul {
    margin-bottom: 3px;
}
#RB_confirm {
    width: 20em;
    padding: 1em;
    border: 1px solid #ccc;
    background: #ffc;
}
#RB_confirm input {
    margin: .2em;
}
#RB_confirm ul {
    margin-left: .5em;
}
#RB_info {
    width: 30em;
    padding: 1em;
    border: 1px solid #ccc;
    background: #ccf;
}
#RB_info input {
    margin: .2em;
}

/* Color picker styles. */
#color-picker {
    color: #999;
    background: #000;
    padding-bottom: 8px;
    border: 1px solid #111;
    width: 148px;
    height: 155px;
    z-index: 100;
}
#color-picker .north {
    background: #111;
    border-bottom: 1px solid #171717;
    font-size: 11px;
}
#color-picker .north div {
    color: #999;
    float: right;
    padding: 5px 7px;
    cursor: pointer;
    -moz-user-select: none;
    -khtml-user-select: none;
    user-select: none;
}
#color-picker .north div:hover {
    color: #fff;
}
#color-picker .south {
    margin: 32px 0 0 10px;
    cursor: crosshair;
    -moz-user-select: none;
    -khtml-user-select: none;
    user-select: none;
}
#color-picker .south img {
    height: 100%;
    width: 100%;
    position: relative;
    top: -8px;
    left: -1px;
}
#color-picker #color-picker-cursor {
    background: url("graphics/color-picker-cursor.gif") no-repeat;
    position: absolute;
    height: 9px;
    width: 9px;
    z-index: 101;
}
#color-picker #color-picker-cursor img {
    height: 100%;
    width: 100%;
    position: relative;
    top: -8px;
    left: -1px;
}
#color-picker #color-picker-hex {
    padding: 5px 0 4px 7px;
    cursor: text;
    float: left;
}
#color-picker #color-picker-hex:hover {
    color: #fff;
}
#color-picker #color-picker-hex-edit {
    float: left;
}
#color-picker #color-picker-resize {
    float: right;
    top: -14px;
    left: 7px;
    height: 14px;
    width: 14px;
    cursor: se-resize;
}
#color-picker #color-picker-sphere {
    height: 128px;
    width: 128px;
}
.color-picker-palette-src {
    background-image: url("graphics/color-picker-palette.png");
}
.color-picker-resize-src {
    background-image: url("graphics/color-picker-resize.gif");
}

.leftAlign {
    text-align: left;
}
.rightAlign {
    text-align: right;
}
.leftFloat {
    float: left;
}
.rightFloat {
    float: right;
}

.toggleQuoteHide, .toggleQuoteShow {
    font-size: 80%;
    cursor: pointer;
    background: #ddd;
}
.toggleQuoteHide:hover, .toggleQuoteShow:hover {
    text-decoration: underline;
}
.toggleQuoteParent {
    margin-bottom: 8px;
}

/* SpellChecker styles. */
.spellcheckChecking, .spellcheckIncorrect {
    color: #f00;
}
.spellcheckIncorrect, .spellcheckCorrected {
    text-decoration: underline;
    cursor: pointer;
}
.spellcheckCorrected {
    color: #090;
}

/* KeyNavList styling. */
.KeyNavList {
    background: #f4f4f4;
    border: 1px solid #d4d4d4;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 2px;
    position: absolute;
}
.KeyNavList ul {
    list-style-type: none;
    padding: 1px;
}
.KeyNavList ul li {
    cursor: pointer;
    color: #000;
    padding: 3px;
    white-space: nowrap;
}
.KeyNavList ul li.selected {
    background: gray;
    color: #fff;
}
.KeyNavList ul li:hover, .KeyNavList ul li.selected:hover {
    background: lightgrey;
    color: #fff;
}

/* Growler notice styling. */
#Growler {
    width: 340px;
}
#Growler div.GrowlerNotice {
    filter: alpha(opacity=80);
    -moz-opacity: .8;
    opacity: .8;
    zoom: 1;
    width: 300px;
    padding: 10px 10px 10px 25px;
    margin: 5px auto;
    text-align: left;
    display: none;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    min-height: 20px;
    border-width: 1px;
    border-style: solid;
    background-position: 3px center;
    background-repeat: no-repeat;
    color: #fff;
    overflow-x: hidden;
    cursor: pointer;
}
#Growler div.GrowlerNoticeHead {
    font-weight: bold;
}
#Growler div.horde-error, #GrowlerLog li.horde-error {
    background-image: url("graphics/alerts/error.png");
}
#Growler div.horde-error div.GrowlerNoticeBody {
    padding-right: 15px;
}
#Growler div.horde-message, #GrowlerLog li.horde-message {
    background-image: url("graphics/alerts/message.png");
}
/* ... */

